--- a/portfolio/Crystal/app/scss/all.scss
+++ b/portfolio/Crystal/app/scss/all.scss
@@ -1,11 +1,24 @@
 body {
     font-size: 10px;
-    overflow-x: hidden;
+    min-width: 320px;
 }
+
+.body_active {
+    overflow: hidden;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 ul {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+
+#wrapper {
+    overflow: hidden;
 }
 
 .socials_block {
@@ -63,6 +76,10 @@ header {
         top: -2px;
         font: 2em "SupermolotThin";
         color: #8e8e8e;
+        text-decoration: none;
+        i {
+            display: none;
+        }
     }
     .header_title {
         position: absolute;
@@ -236,6 +253,109 @@ footer {
     }
 }
 
+.sub {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 0;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.nav-btn {
+    display: none;
+    position: absolute;
+    right: 15px;
+    bottom: 0;
+    z-index: 1000;
+    a {
+        display: block;
+        position: relative;
+        height: 17px;
+        width: 25px;
+        box-sizing: border-box;
+        transition: .3s ease;
+        span {
+            display: block;
+            height: 3px;
+            width: 100%;
+            background-color: #949494;
+            position: absolute;
+            top: 7px;
+            transition: .3s ease;
+            border-radius: 1px;
+        }
+        &::before {
+            display: block;
+            content: "";
+            height: 3px;
+            width: 100%;
+            background-color: #949494;
+            position: absolute;
+            transition: .3s ease;
+            top: 0;
+            border-radius: 1px;
+        }
+        &::after {
+            display: block;
+            content: "";
+            height: 3px;
+            width: 100%;
+            background-color: #949494;
+            position: absolute;
+            bottom: 0;
+            transition: .3s ease;
+            border-radius: 1px;
+        }
+    }
+    .a_active {
+        &::before {
+            transform: rotate(45deg);
+            top: 6px;
+            width: 26px;
+            background: #fff;
+        }
+        &::after {
+            transform: rotate(-45deg);
+            bottom: 8px;
+            width: 26px;
+            background: #fff;
+        }
+        span {
+            background-color: transparent !important;
+        }
+    }
+}
+
+.mobile_nav_block {
+    position: fixed;
+    left: 0;
+    transform: translateX(-100%);
+    transition: .3s;
+    z-index: 2;
+    height: 100vh;
+    width: 250px;
+    top: 0;
+    background-color: #fff;
+    padding: 20px 15px;
+    ul {
+        display: block;
+    }
+    li {
+        margin: 0;
+    }
+    a {
+        padding: 10px 10px;
+        display: block;
+    }
+}
+
+.nav_active {
+        transform: translateX(0) !important;
+    }
+
 @media screen and (min-width: 1025px) {
     header ul a:hover {
         color: #ff028a;
@@ -244,4 +364,175 @@ footer {
     footer .nav_left li a:hover, footer .nav_right li a:hover {
         color: #ff028a;
     }
+    .nav-btn a:hover {
+        span, &:after, &:before {
+            background-color: #000;
+        }
+    }
+}
+
+@media screen and (max-width: 1230px) {
+   header .header_title {
+    display: none;
+   }
+   header .right_section, header .left_section {
+    display: none;
+   }
+   .nav-btn {
+    display: inline-block !important;
+   }
+   .socials_block {
+     display: none;
+   }
+   header .main_number {
+    bottom: 0;
+    top: auto;
+   }
+   footer .left_section {
+        width: 30%;
+    }
+    footer .right_section .mobile {
+        display: block;
+        height: auto;
+        width: 45%;
+        padding-left: 20px;
+    }
+    footer .right_section .mobile a {
+        margin-top: 10px;
+        display: block;
+        height: auto;
+        &:first-child {
+            margin-right: 0;
+            margin: 0;
+        }
+    }
+    footer .right_section .mobile img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    footer .center_section {
+        width: auto;
+    }
+    footer .right_section .mobile {
+        display: flex;
+        width: 100%;
+        padding: 0;
+        margin-bottom: 10px;
+    }
+    footer .right_section .tel_number {
+        font-size: 2em;
+    }
+    footer .right_section .mobile a {
+        margin: 0;
+        padding: 0 5px;
+    }
+    footer .left_section {
+        width: auto;
+    }
+    footer .right_section {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 768px) {
+   header a.main_logo img {
+    width: 120px;
+    height: auto;
+   }
+   .nav-btn, header .main_number {
+    top: 50%;
+    bottom: auto;
+    transform: translateY(-50%);
+    font-size: 1.8em;
+   }
+   .nav-btn a::after, .nav-btn a::before, .nav-btn a span {
+     height: 2px;
+   }
+   .nav-btn a {
+    height: 16px;
+   }
+   footer .left_section:after {
+        letter-spacing: 1em;
+    }
+    footer {
+        margin-top: 60px;
+    }
+    footer .left_section {
+        width: 50%;
+        padding: 0;
+    }
+    footer .center_section {
+        padding: 0;
+        width: 50%;
+        padding-left: 20px;
+    }
+    footer .left_section:after {
+        display: none;
+    }
+    footer .right_section {
+        display: flex;
+        width: 100%;
+    }
+    footer .right_section .mobile {
+        width: 40%;
+        margin: 0 -5px;
+    }
+    footer .footer_content {
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    footer .left_section {
+        width: 100%;
+    }
+    footer .center_section {
+        padding: 0;
+        margin-top: 20px;
+        width: 100%;
+    }
+    footer .copy span {
+        font-size: 14px;
+    }
+    .fixed_btn {
+        height: 75px;
+        width: 75px;
+    }
+    footer .nav_right {
+        a {
+            display: block;
+            text-align: right;
+        }
+    }
+    footer .right_section .mobile {
+        width: 120px;
+        display: block;
+        a:first-child {
+            margin-bottom: 10px;
+        }
+    }
+    footer .right_section {
+        padding-top: 20px;
+        justify-content: flex-start;
+        align-items: center;
+    }
+    footer .right_section .tel_number {
+        padding-left: 10px;
+    }
+    footer .copy {
+        br {
+            display: none;
+        }
+    }
+   header .main_number  {
+    font-size: 0em;
+    i {
+        display: inline-block;
+        font-size: 18px;
+        color: #949494;
+    }
+   }
 }
