--- a/Shop/lc-page/app/css/lc_all.css
+++ b/Shop/lc-page/app/css/lc_all.css
@@ -627,18 +627,26 @@
     -webkit-transition: .3s;
     -o-transition: .3s;
     transition: .3s;
-    display: block;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 40px;
     width: 40px;
     background-color: #fff;
-    text-align: center;
     cursor: pointer;
     margin-right: 10px; }
     .orders-page_container .link_block .button_favourites i {
       margin: 0;
       color: #ccc;
-      display: inline-block;
-      vertical-align: middle;
       font-size: 18px; }
   .orders-page_container .link_block .added {
     border-color: #f66069 !important; }
