--- a/Shop/lc-page/app/css/lc_all.css
+++ b/Shop/lc-page/app/css/lc_all.css
@@ -1,3 +1,41 @@
+.in-progress {
+  border: 1px solid #e5e5e5 !important;
+  -webkit-box-sizing: padding-box;
+          box-sizing: padding-box;
+  position: relative;
+  overflow: hidden; }
+
+.in-progress:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0.7;
+  color: #818181;
+  background: -webkit-linear-gradient(135deg, rgba(220, 220, 220, 0.5) 25%, transparent 25%, transparent 50%, rgba(220, 220, 220, 0.5) 50%, rgba(220, 220, 220, 0.5) 75%, transparent 75%, transparent);
+  background: -o-linear-gradient(135deg, rgba(220, 220, 220, 0.5) 25%, transparent 25%, transparent 50%, rgba(220, 220, 220, 0.5) 50%, rgba(220, 220, 220, 0.5) 75%, transparent 75%, transparent);
+  background: linear-gradient(-45deg, rgba(220, 220, 220, 0.5) 25%, transparent 25%, transparent 50%, rgba(220, 220, 220, 0.5) 50%, rgba(220, 220, 220, 0.5) 75%, transparent 75%, transparent);
+  background-repeat: repeat;
+  -webkit-background-size: 40px 40px, 100% 100%;
+          background-size: 40px 40px, 100% 100%;
+  -webkit-animation: progress-bar-stripes 2s linear infinite;
+          animation: progress-bar-stripes 2s linear infinite; }
+
+@-webkit-keyframes progress-bar-stripes {
+  from {
+    background-position: 0 0; }
+  to {
+    background-position: 40px 0; } }
+
+@keyframes progress-bar-stripes {
+  from {
+    background-position: 0 0; }
+  to {
+    background-position: 40px 0; } }
+
 .slick-dots {
   padding: 0;
   margin: 30px 0 0;
