--- a/Shop/lc-page/app/scss/lc_all.scss
+++ b/Shop/lc-page/app/scss/lc_all.scss
@@ -1,3 +1,36 @@
+.in-progress {
+    border: 1px solid #e5e5e5 !important;
+    box-sizing: padding-box;
+    position: relative;
+    overflow: hidden;
+}
+.in-progress:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+  color: #818181;
+  background: linear-gradient(-45deg, rgba(220, 220, 220, 0.5) 25%, transparent 25%, transparent 50%, rgba(220, 220, 220, 0.5) 50%, rgba(220, 220, 220, 0.5) 75%, transparent 75%, transparent);
+ 
+  background-repeat: repeat;
+  background-size: 40px 40px, 100% 100%;
+  animation: progress-bar-stripes 2s linear infinite;
+}
+
+@keyframes progress-bar-stripes {
+  from { background-position: 0 0; }
+  to { background-position: 40px 0; }
+}
+
+
+
+
+
+
 .slick-dots {
     padding: 0;
     margin: 30px 0 0;
